--- a/src/app/components/course/resume/payment/payment.component.html
+++ b/src/app/components/course/resume/payment/payment.component.html
@@ -4,7 +4,7 @@
     <div class="row">
       <div class="col-md-7">
         <div  class="grey" style="background-color: #afbfc4div!important;height: 300px; overflow-y: scroll;">
-          <p> 
+          <p>
             Si es de PLAZO FIJO, debe dejarse constancia que se trata de UN AÑO LABORAL DOCENTE, vale decir, no puede pactarse por períodos inferiores o superiores a éste, excepcionalmente podrá estipularse en el CONTRATO DE PLAZO FIJO una duración INFERIOR al AÑO LABORAL DOCENTE, en los siguientes casos:
           a.- Si termina el contrato de un Profesional de la Educación en el transcurso del Año Laboral Docente, caso en el cual el Empleador tiene derecho a contratar a otro trabajador, pero, sólo por el tiempo que resta hasta el término del respectivo Año Laboral Docente;
           b.- En el caso de Profesionales de la Educación contratados para actividades extraordinarias o especiales que tengan una duración inferior al Año Escolar.
@@ -23,7 +23,7 @@
 
         <h4 style="color:#ec6608;">Valor Neto de Compra</h4>
         <h3>
-          <b>$99.990</b>
+          <b>{{modalidad.precio | currency}}</b>
         </h3>
         <h4 style="color:#ec6608;">Seleccione un Medio de Pago</h4>
           <input type="radio" name="optradiopago">
