--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -2,6 +2,5 @@
 <app-form *ngIf="viewForm" (open)="showResumen($event)"></app-form>
 <app-resume
   *ngIf="viewResumen"
-  (back)="backForm($event)"
-  [student]="student">
+  (back)="backForm($event)">
 </app-resume>
