--- a/src/app/components/course/form/data/data.component.html
+++ b/src/app/components/course/form/data/data.component.html
@@ -118,12 +118,14 @@
                   <label class="control-label col-sm-4" for="fechanac">Fecha de Nacimiento:</label>
                   <div class="col-sm-8">
                     <input
-                    type="text"
-                    class="form-control"
-                    id="fechaNacimiento"
-                    name="fechaNacimiento"
-                    [(ngModel)]="student.fechaNacimiento"
-                    required>
+                      class="form-control"
+                      type="text"
+                      mwlFlatpickr
+                      [(ngModel)]="selectedDate"
+                      [altInput]="true"
+                      [convertModelValue]="true"
+                      [inline]="true">
+                      <p>Presione dos veces para confirmar</p>
                   </div>
                 </div>
                 <div class="form-group">
