--- a/src/app/components/course/resume/resume-data/resume-data.component.html
+++ b/src/app/components/course/resume/resume-data/resume-data.component.html
@@ -61,7 +61,7 @@
                  <div class="form-group">
                    <label class="control-label col-sm-6" for="fechanac">Fecha de Nacimiento:</label>
                    <div class="col-sm-6">
-                     <label class="control-label" id="elrut">{{student.fecha}}</label>
+                     <label class="control-label" id="elrut">{{student.fechaNacimiento}}</label>
                    </div>
                  </div>
                  <div class="form-group">
