css de categorias

--- a/src/app/components/course/form/selected/selected.component.html
+++ b/src/app/components/course/form/selected/selected.component.html
@@ -6,7 +6,7 @@
   </div>
   <div class="row">
     <div class="col-md-2">
-      <img src="{{'assets/img/productos/'+categoria+'.png'}}" height="200px" width="180px"/>
+      <img src="{{'http://peuman.cl/apps/ventaonline_20170925/dist/assets/img/productos/'+categoria+'.png'}}" height="200px" width="180px"/>
     </div>
     <div class="col-md-3">
       <h4 style="color:#ec6608;">Curso Teorico</h4>
