--- a/src/app/components/course/form/data/data.component.html
+++ b/src/app/components/course/form/data/data.component.html
@@ -153,7 +153,7 @@
           <div class="row">
             <div class="form-group">
               <div align="center">
-                <button type="submit" class="btn btn-success" (click)="nextStep()">Siguiente</button>
+                <button type="submit" class="btn btn-default" (click)="nextStep()">Siguiente</button>
               </div>
             </div>
           </div>
