--- a/src/assets/css/style.css
+++ b/src/assets/css/style.css
@@ -437,6 +437,36 @@ box-shadow: 1px 2px 2px 4px rgba(204,204,204,1);
 .calendar5{
   background-color: #ec6608;
 }
+
+
+/*===========================
+  CATEGORIAS
+============================= */
+.category_box {
+  padding-top: 50px;
+  text-align: center;
+}
+
+.category_box > .category_img {
+  vertical-align: text-center;
+  padding-left: 25px;
+}
+
+.category_box > .category_row {
+  margin-top: -30px;
+}
+
+.category_box > .category_row > h5 {
+  color: white;
+  font-weight: bold;
+  font-style: italic;
+  font-size: 24px;
+}
+
+.category_box > .category_row > p {
+  color:white;
+  font-size: 22px;
+}
 /*===========================
   Services
 ============================ */
