Servicios con JSON

--- a/src/app/components/course/form/selected/selected.component.html
+++ b/src/app/components/course/form/selected/selected.component.html
@@ -12,13 +12,13 @@
       <h4 style="color:#ec6608;">Curso Teorico</h4>
       <p>
         Lunes a Sabado, de 9:00 a 12:00 hrs.<br>
-        Inicio: {{inicio | date:fullDate}}<br>
-        Termino: {{fin | date:fullDate}}
+        Inicio: {{inicio | date:'yMMMMEEEEd'}}<br>
+        Termino: {{fin | date:'yMMMMEEEEd'}}
       </p>
       <h4 style="color:#ec6608;">Curso Practico</h4>
       <p>
-        Inicio: {{inicio | date:fullDate}}<br>
-        Termino: {{fin | date:fullDate}}
+        Inicio: {{inicio | date:'yMMMMEEEEd'}}<br>
+        Termino: {{fin | date:'yMMMMEEEEd'}}
       </p>
       <h4 style="color:#ec6608;">Numero de Tramos</h4>
       <p>
